discussion/kv_engine/179217/179217_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-52676: Add ArrayHistogram

Simple implementation of a histogram backed by an std::array, for use
with small integral types (most likely uint8_t).

Change-Id: I180d75a8abc3cc42d9c440f9ca424c26ce7eab52

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2022-08-26 09:52:02.000000000
Message: 
Uploaded patch set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-08-26 10:12:10.000000000
Message: 
Patch Set 4: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19746/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/array_histogram.cc:99:10: error: unknown type name "size_t"; did you mean "std::size_t"? [clang-diagnostic-error]
    for (size_t i = 0; i < other.valueArray.size(); i++) {
         ^~~~~~
         std::size_t
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/x86_64-pc-linux-gnu/bits/c++config.h:260:26: note: "std::size_t" declared here
  typedef __SIZE_TYPE__         size_t;
                                ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19746/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/array_histogram.cc:99:10:
error: unknown type name "size_t"; did you mean "std::size_t"? [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19746/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40909/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/array_histogram.cc:99:10:
error: unknown type name "size_t"; did you mean "std::size_t"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40909/ )

CMake error: CMakeLists.txt:166 (MESSAGE) ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40909/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/18967/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48669/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9439/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22047/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20974/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21690/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22778/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9538/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30074/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
